# rusty2048

./: .gitignore  Cargo.toml  README.md
src/: ai.rs  game.rs  main.rs
