[package]
name = "rusty2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
transpose = "0.2.1"
rurel = "0.2.1"
fast-math = "0.1.1"
chrono = "0.4.22"
tui = "0.19"
crossterm = "0.25"
requestty = "0.4.1"
serde_any = "0.5.0"
serde = { version = "1.0", features = ["derive"] }